--- a/app/templates/skeleton/bower.json
+++ b/app/templates/skeleton/bower.json
@@ -11,16 +11,18 @@
     "jquery": "~2.0",
     "underscore": "~1.5",
     "bootstrap": "~3.1",
-    "angular": "~1.2",
+    "angular": "~1.4",
     <% if(uirouter) { print('"angular-ui-router": "~0.2",'); } else { print('"angular-route": "~1.2",'); } %>
-    "angular-animate": "~1.2",
-    "angular-resource": "~1.2",
-    "angular-cookies": "~1.2",
-    "angular-mocks": "~1.2",
-    "angular-ui-utils": "~0.1",
-    "angular-bootstrap": "~0.10",
-    "moment": "~2.5",
-    "less.js": "~1.6",
-    "font-awesome": "~4.0"
+    "angular-animate": "~1.5",
+    "angular-resource": "~1.5",
+    "angular-cookies": "~1.5",
+    "angular-mocks": "~1.5",
+    "angular-bootstrap": "~0.14",
+    "less.js": "~2.5.1",
+    "font-awesome": "~4.4",
+    "moment": "~2.10",
+    "toastr": "~2.1",
+    "angular.flashr": "*",
+    "angular-gettext": "~2.0.3"
   }
 }
