--- a/app/templates/skeleton/package.json
+++ b/app/templates/skeleton/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4",
     "grunt-angular-templates": "~0.5",
     "grunt-browser-output": "0.1.0",
+    "grunt-connect-proxy": "=0.1.8",
     "grunt-contrib-clean": "~0.5",
     "grunt-contrib-concat": "~0.3",
     "grunt-contrib-connect": "~0.6",
@@ -17,13 +18,12 @@
     "grunt-contrib-watch": "~0.6",
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "~0.8.3",
-    "grunt-ng-annotate": "~0.5",
+    "grunt-ng-annotate": "~0.10",
     "karma": "~0.12.6",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
     "karma-mocha-reporter": "~0.2.5",
-    "karma-phantomjs-launcher": "~0.1.4",
     "load-grunt-tasks": "~0.2"
   }
 }
